--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Third-Party Libraries</title>
-    <script src="lodash.js" defer></script>
+    <script src="lodash.min.js" defer></script>
+    // here order matters
     <script src="app.js" defer></script>
   </head>
   <body>
