using _.difference() method of lodash.min.js, finding the difference between two arrays.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Third-Party Libraries</title>
     <script src="lodash.min.js" defer></script>
-    // here order matters
+    <!-- here order matters -->
     <script src="app.js" defer></script>
   </head>
   <body>
